terraform/modules/vpc_network/igws.tf
# IGW
resource "aws_internet_gateway" "ig" {
  vpc_id = aws_vpc.vpc.id
}

# EIP for NAT GW
resource "aws_eip" "nat_eip" {
  vpc        = true
  depends_on = [aws_internet_gateway.ig]
}

# NAT
resource "aws_nat_gateway" "nat" {
  allocation_id = aws_eip.nat_eip.id
  subnet_id     = element(aws_subnet.public_subnet.*.id, 0)
  depends_on    = [aws_internet_gateway.ig]
}
